<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">NewsFeedApp</string>

    <!-- Text to display in the list when there are no news items [CHAR LIMIT=NONE] -->
    <string name="no_news_items">No news items found.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>

    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">News Feed Settings</string>

    <!-- Strings For Query Parameter Preference [CHAR LIMIT=30] -->
    <string name="settings_query_parameter_label">Query Parameter</string>
    <string name="settings_query_parameter_key" translatable="false">query_parameter</string>
    <string name="settings_query_parameter_default" translatable="false">avengers</string>

    <!-- Strings For Maximum Number of News Items Preference [CHAR LIMIT=30] -->
    <string name="settings_maximum_number_of_news_items_label">Maximum Number of New Items</string>
    <string name="settings_maximum_number_of_news_items_key" translatable="false">maximum_number_of_news_items</string>
    <string name="settings_maximum_number_of_news_items_default" translatable="false">@string/settings_10_maximum_number_of_news_items_value</string>

    <!-- Label for 10 Maximum Number of News Items Option [CHAR LIMIT=20] -->
    <string name="settings_10_maximum_number_of_news_items_label">10</string>
    <string name="settings_10_maximum_number_of_news_items_value" translatable="false">10</string>

    <!-- Label for 15 Maximum Number of News Items Option [CHAR LIMIT=20] -->
    <string name="settings_15_maximum_number_of_news_items_label">15</string>
    <string name="settings_15_maximum_number_of_news_items_value" translatable="false">15</string>

    <!-- Label for 20 Maximum Number of News Items Option [CHAR LIMIT=20] -->
    <string name="settings_20_maximum_number_of_news_items_label">20</string>
    <string name="settings_20_maximum_number_of_news_items_value" translatable="false">20</string>

    <!-- Strings For News Items Order By Preference [CHAR LIMIT=30] -->
    <string name="settings_news_items_order_by_label">Order By</string>
    <string name="settings_news_items_order_by_key" translatable="false">news_items_order_by</string>
    <string name="settings_news_items_order_by_default" translatable="false">@string/settings_news_items_order_by_relevance_value</string>

    <!-- Label for News Items Order By Relevance Option [CHAR LIMIT=20] -->
    <string name="settings_news_items_order_by_relevance_label">Relevance</string>
    <string name="settings_news_items_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for News Items Order By Newest Option [CHAR LIMIT=20] -->
    <string name="settings_news_items_order_by_newest_label">Newest</string>
    <string name="settings_news_items_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for News Items Order By Oldest Option [CHAR LIMIT=20] -->
    <string name="settings_news_items_order_by_oldest_label">Oldest</string>
    <string name="settings_news_items_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Strings For News Items Order Date Preference [CHAR LIMIT=30] -->
    <string name="settings_news_items_order_date_label">Order Date</string>
    <string name="settings_news_items_order_date_key" translatable="false">news_items_order_date</string>
    <string name="settings_news_items_order_date_default" translatable="false">@string/settings_news_items_order_date_published_value</string>

    <!-- Label for News Items Published Order Date Option [CHAR LIMIT=20] -->
    <string name="settings_news_items_order_date_published_label">Published (The date the content appeared on the web)</string>
    <string name="settings_news_items_order_date_published_value" translatable="false">published</string>

    <!-- Label for News Items Newest Order Date Option [CHAR LIMIT=20] -->
    <string name="settings_news_items_order_date_newspaper_edition_label">Newspaper Edition (The date the content appeared in print)</string>
    <string name="settings_news_items_order_date_newspaper_edition_value" translatable="false">newspaper-edition</string>

    <!-- Label for News Items Oldest Order Date Option [CHAR LIMIT=20] -->
    <string name="settings_news_items_order_date_last_modified_label">Last Modified (The date the content was last updated)</string>
    <string name="settings_news_items_order_date_last_modified_value" translatable="false">last-modified</string>

</resources>
